--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 </head>
 <body>
 	<h1>This is my beautiful website</h1>
-	<p>Welcome, I hope you enjoy my website</p>
+	<p>Hi, I hope you enjoy my website</p>
 	<p>This is another paragraph</p>
 </body>
 </html>
