--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
 	<h1>This is my beautiful website</h1>
 	<p>Hi, I hope you enjoy my website</p>
 	<p>This is another paragraph</p>
+	<p>One Feature added by temp</p>
 </body>
 </html>
